<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Shreeram Enterprises</string>
    <string name="balance" translatable="false">Balance</string>
    <string name="Rupee" translatable="false">\u20B9</string>
    <string name="password" translatable="false">Password</string>
    <string name="log_in" translatable="false">Log In</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="register_here" translatable="false">Register</string>
    <string name="mobile_recharge" translatable="false">Mobile\nRecharge</string>
    <string name="micro_natm" translatable="false">Micro\nATM</string>
    <string name="bus_nbooking" translatable="false">Bus\nBooking</string>
    <string name="insurance_npayment" translatable="false">Insurance\nPayment</string>
    <string name="aeps_npayments" translatable="false">AEPS\nPayments</string>
    <string name="data_ncard" translatable="false">Data\nCard</string>
    <string name="gas_npayment" translatable="false">Gas\nPayment</string>
    <string name="water_payment" translatable="false">Water\nPayment</string>
    <string name="fasttag_nrecharge" translatable="false">FastTag\nRecharge</string>
    <string name="dmt_npayment" translatable="false">DMT\nPayment</string>
    <string name="category" translatable="false">Category</string>
    <string name="view_users" translatable="false">View Users</string>
    <string name="add_user" translatable="false">Add User</string>
    <string name="technical_error" translatable="false">We are facing some technical issue, please try after some time.</string>
    <string name="drawerOpen" translatable="false">drawerOpen</string>
    <string name="drawerClose" translatable="false">drawerClose</string>
    <string name="home_fragment" translatable="false">Home Fragment</string>
    <string name="sport_fragment" translatable="false">Sport Fragment</string>
    <string name="movie_fragment" translatable="false">Movie Fragment</string>
    <string name="wallet" translatable="false">Wallet</string>
    <string name="rupee_zero" translatable="false">₹ 0.00</string>
    <string name="aeps" translatable="false">Aeps</string>
    <string name="request_nfunds" translatable="false">Request\nFunds</string>
    <string name="add_nmoney" translatable="false">Add\nMoney</string>
    <string name="transfer_funds" translatable="false">Transfer\nFunds</string>
    <string name="fund_services" translatable="false">Fund Services</string>
    <string name="recharge_services" translatable="false">Recharge Services</string>
    <string name="recharge" translatable="false">Recharge</string>
    <string name="dth_recharge" translatable="false">Dth Recharge</string>
    <string name="dth_number" translatable="false">DTH Number</string>
    <string name="select_operator" translatable="false">Choose Operator</string>
    <string name="enter_amount" translatable="false">Enter Amount</string>
    <string name="land_line_recharge" translatable="false">Land-line Recharge</string>
    <string name="land_line_number" translatable="false">Land-line Number</string>
    <string name="request_funds" translatable="false">Request Funds</string>
    <string name="send_request" translatable="false">Send Request</string>
    <string name="add_money" translatable="false">Add Money</string>
    <string name="phone_pe" translatable="false">Phone Pe</string>
    <string name="google_pay" translatable="false">Google Pay</string>
    <string name="paytm" translatable="false">Paytm</string>
    <string name="amazon_pay" translatable="false">Amazon Pay</string>
    <string name="transfer_funds_title" translatable="false">Transfer Funds</string>
    <string name="enter_amount_to_transfer" translatable="false">Enter Amount to Transfer</string>
    <string name="recharge_reports" translatable="false">Recharge Reports</string>
    <string name="all_reports" translatable="false">All\nReports</string>
    <string name="specific_report" translatable="false">Specific\nReport</string>
    <string name="fund_reports" translatable="false">Fund Reports</string>
    <string name="other_reports" translatable="false">Other Reports</string>
    <string name="debited_funds" translatable="false">Debited Funds</string>
    <string name="fund_requests" translatable="false">Fund Requests</string>
    <string name="ledgers" translatable="false">Ledgers</string>
    <string name="commission_slab" translatable="false">Commission Slab</string>
    <string name="commission_report" translatable="false">Commission Report</string>
    <string name="dispute_report" translatable="false">Dispute\nReport</string>
    <string name="aeps_reports" translatable="false">AEPS Reports</string>
    <string name="aeps_nhistory" translatable="false">AEPS\nHistory</string>
    <string name="aeps_nwithdrawal" translatable="false">AEPS\nWithdrawal</string>
    <string name="aeps_nledger" translatable="false">AEPS\nLedger</string>
    <string name="aeps_ncommission_slab" translatable="false">AEPS\nCommission Slab</string>
    <string name="dmt_ncommission_slab" translatable="false">DMT\nCommission Slab</string>
    <string name="dmt_reports" translatable="false">DMT Reports</string>
    <string name="dmt_history" translatable="false">DMT\nHistory</string>
    <string name="dmt_ndispute" translatable="false">DMT\nDispute</string>
    <string name="dmt_ncommission_history" translatable="false">DMT\nCommission History</string>
    <string name="date_range" translatable="false">Date Range</string>
    <string name="recharge_type" translatable="false">Recharge Type</string>
    <string name="dd_mmm_yy_dd_mmm_yy" translatable="false">dd MMM yy</string>
    <string name="pull_to_refresh" translatable="false">Pull down to refresh</string>
    <string name="txnid" translatable="false">TXNID :</string>
    <string name="dispute" translatable="false">Dispute</string>
    <string name="recid" translatable="false">RECID :</string>
    <string name="operator" translatable="false">Operator</string>
    <string name="recharge_number" translatable="false">Recharge Number </string>
    <string name="opening_nbalance" translatable="false">Opening\nBalance</string>
    <string name="commission_nrecieved" translatable="false">Commission\nRecieved</string>
    <string name="closing_nbalance" translatable="false">Closing\nBalance</string>
    <string name="my_profile" translatable="false">My Profile</string>
    <string name="retailer" translatable="false">Retailer</string>
    <string name="change_npassword" translatable="false">Change\nPassword</string>
    <string name="change_npin" translatable="false">Change\nPin</string>
    <string name="forgot_pin" translatable="false">Forgot\nPin?</string>
    <string name="call_support" translatable="false">Get Support</string>
    <string name="utilities" translatable="false">Utilities</string>
    <string name="current_password" translatable="false">Current Password</string>
    <string name="new_password" translatable="false">New Password</string>
    <string name="confirm_new_password" translatable="false">Confirm New Password</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="change_pin" translatable="false">Change Pin</string>
    <string name="current_pin" translatable="false">Current Pin</string>
    <string name="new_pin" translatable="false">New Pin</string>
    <string name="confirm_new_pin" translatable="false">Confirm New Pin</string>
    <string name="transaction_id" translatable="false">Transaction Id :</string>
    <string name="recharge_id" translatable="false">Recharge Id :</string>
    <string name="amount" translatable="false">Amount</string>
    <string name="recharge_failed" translatable="false">Recharge Failed</string>
    <string name="kyc_not_verified" translatable="false">KYC Not Verified</string>
    <string name="verify_kyc" translatable="false">Verify KYC</string>
    <string name="_12_digit_aadhaar_number" translatable="false">12 -Digit Aadhaar Number</string>
    <string name="manage_users" translatable="false">Manage Users</string>
    <string name="user_name" translatable="false">User Name</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="user_email" translatable="false">User Email</string>
    <string name="user_address" translatable="false">User Address</string>
    <string name="upload_aadhaar_card" translatable="false">Upload Aadhaar Card</string>
    <string name="aadhaar_card" translatable="false">Aadhaar Card </string>
    <string name="register" translatable="false">Register</string>
    <string name="pay_bills" translatable="false">Pay Bills</string>
    <string name="pay_your_bills_with_bbps" translatable="false">Pay your bills with BBPS</string>
    <string name="services" translatable="false">Our Services</string>
    <string name="mobile_npostpaid" translatable="false">Mobile Postpaid</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="electricity" translatable="false">Electricity</string>
    <string name="select_state" translatable="false">Select State</string>
    <string name="select" translatable="false">Select</string>
    <string name="select_board" translatable="false">Select Board</string>
    <string name="enter_customer_number" translatable="false">Enter Customer Number</string>
    <string name="proceed" translatable="false">Proceed</string>
    <string name="pay_bill" translatable="false">Pay bill</string>
    <string name="select_dth_operator" translatable="false">Select Dth Operator</string>
    <string name="select_mobile_operator" translatable="false">Select Mobile Operator</string>
    <string name="view_receipt" translatable="false">View Receipt</string>
    <string name="done" translatable="false">Done</string>
    <string name="fetch_bill" translatable="false">Fetch Bill</string>
    <string name="or" translatable="false">OR</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="no_address_found" translatable="false">Sorry, no address found</string>
    <string name="no_location_data_provided" translatable="false">No location data provided</string>
    <string name="service_not_available" translatable="false">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used" translatable="false">Invalid latitude or longitude used</string>
    <string name="title_activity_cabs_map" translatable="false">Map</string>
    <string name="authorization" translatable="false">Authorization</string>
    <string name="error_mobile_number" translatable="false">Invalid Mobile Number</string>
    <string name="error_password" translatable="false">Invalid Password</string>
    <string name="content_type" translatable="false">Content-Type</string>
    <string name="x_api_key" translatable="false">X-API-KEY</string>
    <string name="error_internet" translatable="false">No Internet Connection</string>
    <string name="btn_okay" translatable="false">OKAY</string>
    <string name="error_invalid_email" translatable="false">Invalid Email</string>
    <string name="invalid_aadhaar" translatable="false">Invalid Aadhaar Number</string>
    <string name="error_invalid_address" translatable="false">Invalid Address</string>
    <string name="error_invalid_name" translatable="false">Invalid Name</string>
    <string name="scrern_sixe" translatable="false">SCREEN SIZE</string>
    <string name="amount_debited" translatable="false">Amount \nDebited</string>
    <string name="product" translatable="false">Product</string>
    <string name="mantra_device" translatable="false">Mantra Device</string>
</resources>