<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPurchaseHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_6sdp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:cardElevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_txn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/txnid"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTxnId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/txnid"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_recid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_txn"
                android:layout_marginLeft="@dimen/_8sdp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvTransactionId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/transaction_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivOperator"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/ll_recid"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/compliance" />

            <TextView
                android:id="@+id/tvProductType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_recid"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_toRightOf="@+id/ivOperator"
                android:text="@string/product" />

            <TextView
                android:id="@+id/tvProductHistoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvProductType"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_toRightOf="@+id/ivOperator"
                android:text="@string/mantra_device"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:id="@+id/rl_statusDetailsProduct"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_alignParentRight="true"

                android:background="@drawable/bg_status_service">

                <TextView
                    android:id="@+id/tvTxnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:padding="@dimen/_3sdp"
                    android:text="2019-11-01T16:30:29.04"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tvRecStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTxnDate"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:text="SUCCESS"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvRecAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvRecStatus"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/rupee_zero"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/tvDisputeBtn"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_below="@+id/tvRecAmount"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/bg_leftcurved_dispute"
                    android:gravity="center"
                    android:text="@string/dispute"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_statusDetailsProduct"
                android:layout_marginTop="@dimen/_25sdp"
                android:padding="@dimen/_3sdp"
                android:weightSum="3">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/_3sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/opening_nbalance"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/tvOpeningBalProd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/rupee_zero"
                        android:textColor="#770000"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/divider8"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/material_grey_500" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/_3sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/amount_debited"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/tvAmountdebited"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/rupee_zero"
                        android:textColor="#2B40C5"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/divider10"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/material_grey_500" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/_3sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/closing_nbalance"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/tvClosingBalProd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/rupee_zero"
                        android:textColor="#029309"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>