<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fund_services.RequestFundsActivity">


    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/cvFundRequestBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_10sdp"
        android:alpha="0.7"
        android:src="@drawable/icon_logo" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:elevation="1dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivBackBtn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_15sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />


        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/request_funds"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_general_new" />

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_progressbar"
        android:visibility="gone"
        android:elevation="@dimen/_3sdp">

        <ProgressBar
            android:id="@+id/progress_bar1"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:indeterminateDrawable="@drawable/progress_icon"
            android:elevation="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/loading"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/progress_bar1"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivOperatorImageFundRequest"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@+id/custToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/bg_circle_upi"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/icon_wallet" />


    <TextView
        android:id="@+id/tvWalletBalanceTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivOperatorImageFundRequest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="Wallet Balance"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/tvWalletBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWalletBalanceTag"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/rupee_zero"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_userinput"
        android:layout_below="@+id/tvWalletBalance"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_150sdp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvRequestTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="Request To -"
                android:textSize="14sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/back_edit"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:elevation="1dp"
                    android:src="@drawable/icon_rupee" />


                <EditText
                    android:id="@+id/etRequestAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:background="@null"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/material_grey_700"
                    android:textSize="14sp" />


            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvFundRequestBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/recharge"
        app:cardElevation="@dimen/_5sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/send_request"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>


